--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
 									</ul>
 								</form>
 								<ul class="icons">
-									<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://twitter.com/jaredkain" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="https://www.linkedin.com/in/jared-kain-5317778b/" class="icon fa-linkedin"><span class="label">Facebook</span></a></li>
+									<li><a href="https://www.instagram.com/jaredkain/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="https://github.com/jaredkain" class="icon fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</article>
 
